test/expected/explain_enw3-c.out
explain enum E x : 3
                 ^
18: error: bit-fields can be only of integral types
